--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "bootstrap": "^5.3.1",
+    "bootstrap-icons": "^1.10.5",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
     "normalize.css": "^8.0.1",
     "react": "18.2.0",
     "react-bootstrap": "^2.8.0",
+    "react-bootstrap-icons": "^1.10.3",
     "react-dom": "18.2.0",
     "typescript": "^5.1.6"
   }
